--- a/WerWirdMillionär/WerWirdMillionär.csproj
+++ b/WerWirdMillionär/WerWirdMillionär.csproj
@@ -79,6 +79,24 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Image1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Joker_3_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Joker_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Joker_1_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Joker_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Joker_2_hover.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
