--- a/WerWirdMillionär/App.config
+++ b/WerWirdMillionär/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Fragen.accdb" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
