--- a/WerWirdMillionär/App.config
+++ b/WerWirdMillionär/App.config
@@ -3,7 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;H:\Eigene Dateien\C# 2017_2018\WerWirdMillionär\WerWirdMillionär\bin\Debug\Fragen.accdb&quot;" />
+        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Fragen.accdb"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
