Änderung der methode in holeFrage()

--- a/WerWirdMillionär/App.config
+++ b/WerWirdMillionär/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Fragen.accdb"
+        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;H:\Eigene Dateien\C# 2017_2018\GitHub\wwm20184\WerWirdMillionär\bin\Debug\Fragen.accdb&quot;"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
