--- a/WerWirdMillionär/App.config
+++ b/WerWirdMillionär/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Fragen.accdb"
+        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\scherzerchristian\Documents\Fragen.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
