--- a/WerWirdMillionär/App.config
+++ b/WerWirdMillionär/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;H:\Eigene Dateien\C# 2017_2018\GitHub\wwm20184\WerWirdMillionär\bin\Debug\Fragen.accdb&quot;"
+        <add name="WerWirdMillionär.Properties.Settings.DBCon" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\scherzerchristian\Documents\Fragen.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
